Enhance stock analysis system with new features and optimizations